--- a/templates/statistique/statquiz.html.twig
+++ b/templates/statistique/statquiz.html.twig
@@ -11,12 +11,14 @@
 			<tr>
 				<th>Nombre de quiz créer</th>
 				<th>Nombre total de question</th>
+				<th>Moyenne des  réponses par questions</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
 				<td>{{ stats.nbquiz }}</td>
 				<td>{{ stats.nbquestion }}</td>
+			<td>{{ stats.nbreponse_question }}</td>
 			</tr>
 		</tbody>
 	</table>
