--- a/templates/shared/header.html.twig
+++ b/templates/shared/header.html.twig
@@ -1,11 +1,17 @@
 <nav>
 <a href="{{path('home')}}">HANDY-QUIZ</a>
+{% if is_granted('ROLE_USER') %}
+<a href="{{path('app_logout')}}">Déconnexion</a>
 <a href="{{path('quiz_index')}}">Liste des quiz</a>
 <a href="{{path('quiz_new')}}">Créer un nouveau quiz</a>
-
 <a href="{{path('question_index')}}">Liste des questions</a>
 			<a href="{{ path('question_new')}}">Créer de nouvelles  questions</a>
-				{% for label, messages in app.flashes(['success', 'warning']) %}
+                                {% else %}
+			<a href="{{ path('app_login')}}">Accédé à mon espace</a>
+
+<a href="{{ path('app_register')}}">Demandez à nous rejoindre</a>
+{% endif %}
+                				{% for label, messages in app.flashes(['success', 'warning']) %}
     {% for message in messages %}
         <div class="flash-{{ label }}">
             {{ message }}
