--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,20 +14,13 @@
     <input type="password" name="password" id="inputPassword" class="form-control" required>
 
     <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+           value="{{ csrf_token('authenticate') }}">
 
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" name="_remember_me"> Remember me
+                <input type="checkbox" name="_remember_me"> Souviens-toi de moi
             </label>
         </div>
-    #}
-
     <button class="btn btn-lg btn-primary" type="submit">
         S'identifier
     </button>
