--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,6 +10,7 @@
     <h1>Inscription</h1>
 
     {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.firstName) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Mot de passe'
